Fixing box shadow

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 						<strong>Try for Free</strong></button>
 					</div>
 					
-					<span style="color: #ccc; margin-left: 10px;" class="glyphicon glyphicon-chevron-down">English </span>
+					English <span style="color: #ccc; margin-left: 10px;" class="glyphicon glyphicon-chevron-down"></span>
 					
 				</div>
 			</div>
