partially done SEO section

--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
 				<div class="optimize">
 				Optimize
 				</div>
-				<div class="panel"> <!-- Third Panel-->
+				<div class="panel" style="padding-bottom: 30px;"> <!-- Third Panel-->
 					<div class="panel-body 3rd"> 
 						<div class="marketing-checklist">
 							<h2 style="border-bottom: 1px solid #CCD1D9;padding-bottom: 20px;">SEO</h2>
@@ -387,6 +387,86 @@
 								</div>
 							</div>
 							
+						</div>
+					</div>
+					<div class="row" style="margin-top: 10px;border-top: 1px solid #CCD1D9;">
+						<div class="col-md-4">
+							<h3 class="seo-h3" style="margin-top: 20px;">In-Page Links</h3>
+						</div>
+						<div class="col-md-8 text-center">
+							<h3>We found a total of 25 link(s) including 0 link(s) to files</h3>
+							<table class="table text-left" style="margin-top: 10px;">
+									<thead style="background-color: #EDF1F5;border-bottom: 1px solid #CCD1D9;">
+										<tr>
+											<th class="">
+												Anchor
+											</th>
+											<th class="">
+												Type
+											</th>
+											<th class="">
+												Follow
+											</th>
+											
+										</tr>
+									</thead>
+									<tbody>
+										<tr class="">
+											<td class="">
+												<span title="1">0</span>
+											</td>
+											<td class="">
+												<span title="3">External Links</span>
+											</td>
+											<td class="">
+												<span title="6">noFollow</span>
+											</td>
+										</tr>
+										<tr class="">
+											<td class="">
+												<span title="1">0</span>
+											</td>
+											<td class="">
+												<span title="3">External Links</span>
+											</td>
+											<td class="">
+												<span title="6">noFollow</span>
+											</td>
+										</tr>
+										<tr class="">
+											<td class="">
+												<span title="1">1</span>
+											</td>
+											<td class="">
+												<span title="3">External Links</span>
+											</td>
+											<td class="">
+												<span title="6">noFollow</span>
+											</td>
+										</tr>
+									</tbody>
+								</table>
+								<a href="#">Show more</a>
+						</div>
+					</div>
+					<div class="row" style="margin-top: 10px;border-top: 1px solid #CCD1D9;">
+						<div class="col-md-4">
+							<h3 class="seo-h3" style="margin-top: 20px;">Broken Links</h3>
+						</div>
+						<div class="col-md-8">						
+							<h3>No broken links were found on this web page</h3>							
+						</div>
+					</div>
+					<div class="row" style="margin-top: 10px;border-top: 1px solid #CCD1D9;">
+						<div class="col-md-4">
+							<h3 class="seo-h3" style="margin-top: 20px;">Underscores in the URLs</h3>
+						</div>
+						<div class="col-md-8">						
+							<h3>Great, you are not using ‪underscores (these_are_underscores) in your URLs.</h3>							
+						</div>
+						<div class="criterium-advice" style="display: block; padding: 15px;margin: 15px;">
+							<p>Great, you are not using ‪underscores (these_are_underscores) in your URLs. </p>
+							<p> While Google™ treats hyphens as word separators, it does not for underscores.</p>			
 						</div>
 					</div>
 				</div> <!-- end of Third Panel-->
