--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 	<meta name="author" content="Basil">
 	<link rel="stylesheet" href="bootstrap/css/bootstrap.css">
 	<link rel="stylesheet" href="style.css">
+	<link rel="icon" href="images/favicon.jpg" type="image/icon">
 	<script src="bootstrap/js/jquery-1.12.0.min.js"></script>
 </head>
 <body>
