Adding footer logo

--- a/index.html
+++ b/index.html
@@ -928,8 +928,10 @@
 		</div>
 	</div>
 	<footer class="container">
-		<ul class="row list-inline">
-			<li style="width:40%"></li>
+		<ul class="row list-inline" style="margin-top: -30px;padding-top: 30px; border-top: 1px solid #ccc;">
+			<li style="width:40%;vertical-align: top;">
+				<img src="images/logo2.png" alt="logo">
+			</li>
 			<li>
 				<ul class="list-unstyled">
 					<li><a href="#">Pricing</a></li>
